# audio_upload_task

./: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 2025-03-30_create_tables.py
app/: main.py
app/api/: deps.py
app/api/routers/: admin.py  audio.py  auth.py
app/auth/: jwt.py  yandex.py
app/core/: config.py  s3.py
app/crud/: base.py  crud_audio.py  crud_user.py
app/db/: models.py  session.py
app/schemas/: audio.py  token.py  user.py
