[project]
name = "audio-upload-task"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.9,<4.0"
dependencies = [
    "fastapi[all] (>=0.115.12,<0.116.0)",
    "sqlalchemy[asyncio] (>=2.0.40,<3.0.0)",
    "psycopg[binary] (>=3.2.6,<4.0.0)",
    "pydantic-settings (>=2.8.1,<3.0.0)",
    "bcrypt (>=4.1.2,<5.0.0)",
    "PyJWT (>=2.8.0,<3.0.0)",
    "aioboto3 (>=12.3.0,<13.0.0)",
    "alembic (>=1.13.1,<2.0.0)",
    "python-multipart (>=0.0.9,<0.1.0)",
    "httpx (>=0.27.0,<0.28.0)",
    "uvicorn (>=0.34.0,<0.35.0)"
]

[tool.poetry]
packages = [
    { include = "app" }
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
